shmuel 02.09.2017 20:34:02 +0200 - build 5022

1. FileList::SetSortMode() - было чтение памяти за пределами массива.

drkns 02.09.2017 16:16:24 +0100 - build 5021

1. Уточнение 5020.1.

drkns 02.09.2017 15:38:54 +0100 - build 5020

1. Рефакторинг. Убран дублирующийся код и кое-что вынесено из common.hpp.

2. Используем IsProcessorFeaturePresent для определения отсутствия SSE2.

drkns 30.08.2017 20:44:52 +0100 - build 5019

1. Новые версии tinyxml2 и fmt.

2. Не прелоадим lua51.dll, если плагины отсутствуют в принципе.

svs 30.08.2017 14:14:51 +0300 - build 5018

1. SQLite 3.20.1

w17 30.08.2017 13:53:46 +0300 - build 5017

1. Уточнение+ 5015

w17 30.08.2017 13:19:19 +0300 - build 5016

1. Уточнение 5015

w17 30.08.2017 12:21:12 +0300 - build 5015

1. Preload %FARHOME%\legacy\lua51.dll if x86 CPU doesn't support SSE2.

drkns 26.08.2017 11:20:44 +0100 - build 5014

1. В макрофункции date творилась дичь:
   Согласно документации, "%Z" должно было возвращать "Имя часового пояса или пусто, если часовой пояс не задан".
   На самом же деле возвращалась разница между UTC и текущей TZ в формате ±hhmm, т. е. почти как %z в strftime, но, ВНИМАНИЕ, без учёта DST bias.
   Что же это значит? А значит это, например, то, что все даты во всех changelogах (включая этот) имеют мало общего с действительностью.

   Теперь:
     %Z - это на самом деле ИМЯ часового пояса, как обещано.
     %z - это смещение локального времени относительно UTC.

   Не забудьте исправить %Z на %z в своём макросе.

shmuel 24.08.2017 15:16:45 +0200 - build 5013

1. MCTL_GETLASTERROR можно теперь вызывать и после исполнения MSSC_POST и MCTL_EXECSTRING.

2. MCTL_EXECSTRING теперь учитывает флаг KMFLAGS_SILENTCHECK.

shmuel 23.08.2017 12:57:35 +0200 - build 5012

1. Флаг KMFLAGS_SILENTCHECK игнорировался в команде MSSC_POST.

drkns 18.08.2017 09:30:57 +0000 - build 5011

1. Не работало центрирование кнопок в диалоге поиска при изменении размера.

drkns 17.08.2017 22:31:49 +0000 - build 5010
